@startuml
title Class view — Dashboard connection summary

skinparam backgroundColor #FFFDF7
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontColor #18352F
skinparam ArrowColor #2F6F67
skinparam packageBorderColor #477B73
skinparam packageBackgroundColor #EEF6F3
skinparam rectangleBorderColor #477B73
skinparam rectangleBackgroundColor #FFFFFF
skinparam componentBorderColor #8A5A1F
skinparam componentBackgroundColor #FFF6E6
skinparam databaseBorderColor #4E668E
skinparam databaseBackgroundColor #EEF3FB
skinparam actorBorderColor #18352F
skinparam actorBackgroundColor #FFFFFF
skinparam classBorderColor #477B73
skinparam classBackgroundColor #FFFFFF
skinparam sequenceBoxBorderColor #477B73
skinparam sequenceBoxBackgroundColor #F4F8F6
skinparam ParticipantBorderColor #477B73
skinparam ParticipantBackgroundColor #FFFFFF
skinparam BoxPadding 10
hide stereotype

left to right direction
package "Reconciliation Through Relationships application" {
  package "Dashboard connection summary structure" {
    class "ConnectionsTab" as type0 {
      -filter: StatusFilter
      -page: number
      +connections: Connection[]
      +partners: Profile[]
    }
    
    class "StatusFilter" as type1 {
      all
      active
      pending
      pending_review
    }
    
    entity "Connection" as type2 {
      +id
      +participant_a_id
      +participant_b_id
      +status
      +participant_a_connected
      +participant_b_connected
    }
    
    entity "Profile" as type3 {
      +id
      +first_name
      +last_name
      +city
    }
  }
}
type0 --> type1 : uses
type0 --> type2 : filters
type2 --> type3 : resolves partner
legend bottom
  Class = implementation component or value shape
  Interface = public TypeScript contract
  Entity = persisted or domain data record
endlegend
@enduml
